All_Component_DX/force-app/main/default/objects/SM_Tiered_Pricing__c/SM_Tiered_Pricing__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Define tiers for parts pricing.</description>
    <label>Tiered Pricing</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiered Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>