All_Component_DX/force-app/main/default/objects/SM_Tiered_Pricing__c/fields/SM_Parts_Pricing__c.field-meta.xml
<CustomField>
    <fullName>SM_Parts_Pricing__c</fullName>
    <description>Parts Pricing for which this tier is applicable.</description>
    <inlineHelpText>Parts Pricing for which this tier is applicable.</inlineHelpText>
    <label>Parts Pricing</label>
    <referenceTo>Parts_Pricing__c</referenceTo>
    <relationshipLabel>Tiered Pricings</relationshipLabel>
    <relationshipName>Tiered_Pricings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>