All_Component_DX/force-app/main/default/objects/SM_Tiered_Pricing__c/fields/SM_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>SM_Price_Per_Unit__c</fullName>
    <description>Price per unit in this tier.</description>
    <inlineHelpText>Price per unit in this tier.</inlineHelpText>
    <label>Price Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>