All_Component_DX/force-app/main/default/objects/SM_Tiered_Pricing__c/fields/SM_Quantity_Used__c.field-meta.xml
<CustomField>
    <fullName>SM_Quantity_Used__c</fullName>
    <description>Number of units consumed in this tier.</description>
    <inlineHelpText>Number of units consumed in this tier.</inlineHelpText>
    <label>Quantity Used</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>